--- a/vue基础学习/vue/08_计算属性.html
+++ b/vue基础学习/vue/08_计算属性.html
@@ -8,6 +8,7 @@
     <script src='./vue.2.5.17.js'></script>
 </head>
 <body>
+    <div id='app'></div>
     <script>
         /*
             计算属性定义在  computed中  它不是方法，属性的值是函数的返回值
