--- a/vue基础学习/vue/08_计算属性.html
+++ b/vue基础学习/vue/08_计算属性.html
@@ -8,14 +8,43 @@
     <script src='./vue.2.5.17.js'></script>
 </head>
 <body>
-    <div id='app'></div>
+    <div id='app'>
+        <input type="text" v-model="message">
+        <p>{{message}}</p>
+        <p>{{reverseMessage}}</p>
+        <p>{{list}}</p>
+        <p>
+            {{newList}}
+        </p>
+    </div>
     <script>
         /*
             计算属性定义在  computed中  它不是方法，属性的值是函数的返回值
             把对处理数据的逻辑抽离在计算属性中，使模板更加轻量易读
             计算属性的值会被缓存，并根据依赖的数据变化而重新计算
-        
-        */    
+        computed
+        */   
+        new Vue({
+            el:'#app',
+            data:{
+                message:'abcdefghijklmn',
+                list:[1,2,3,4,5,6]
+            },
+            computed:{
+                //this指向实例
+                reverseMessage:function(){
+                    return  this.message.split('').reverse().join('')
+                },
+                newList:function(){
+                    return this.list.map(function(item){
+                        return item*2
+                    }).filter(function(item){
+                        return item<10
+                    })
+                }
+               
+            }
+        }) 
     </script>
 </body>
 </html>
