--- a/todomvc-app-template-master/index.html
+++ b/todomvc-app-template-master/index.html
@@ -34,8 +34,9 @@
 					<!-- These are here just to show the structure of the list items -->
 					<!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 					<li 
-						v-for='item,index in dataObj'
-						v-bind:class='{completed:item.ischecked}'
+						v-for='item,index in filterList'
+						v-bind:class='{completed:item.ischecked,editing:item.isChange}'
+						v-on:dblclick='changeItem(item.id)'
 					>
 						<div class="view">
 							<input v-model='item.ischecked' class="toggle" type="checkbox">
@@ -44,7 +45,10 @@
 								v-on:click='removeItem(item.id)'
 							></button>
 						</div>
-						<input class="edit" value="Rule the web">
+						<input class="edit" value=""
+							v-model='item.text'
+							v-on:blur='modityItem(item.text,item.id)'
+						>
 					</li>
 				</ul>
 			</section>
@@ -55,13 +59,13 @@
 				<!-- Remove this if you don't implement routing -->
 				<ul class="filters">
 					<li>
-						<a class="selected" href="#/">All</a>
+						<a v-on:click="changeList(0)" v-bind:class='{selected:value===0}' href="#/">All</a>
 					</li>
 					<li>
-						<a href="#/active">Active</a>
+						<a  v-on:click="changeList(1)"  v-bind:class='{selected:value===1}' href="#/active">Active</a>
 					</li>
 					<li>
-						<a href="#/completed">Completed</a>
+						<a  v-on:click="changeList(2)"  v-bind:class='{selected:value===2}' href="#/completed">Completed</a>
 					</li>
 				</ul>
 				<!-- Hidden if no completed items are left ↓ -->
